# config_ops

./: .gitignore  .gitmodules  LICENSE  README.md  adjust_file_creation_date.py  adjust_file_creation_date.pyw  archive_media.py  archive_media.pyw  connect_smb.py  connect_smb.pyw  file_operations.py  file_operations.pyw  peripherals.py  peripherals.pyw  pyproject.toml  ssh_tasks.py  ssh_tasks.pyw
