[project]
name = "config-ops"
version = "0.1.0"
description = "Configuration-driven Windows automation scripts for file operations and backups."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "winutils-python",
]

[tool.uv]
package = false

[tool.uv.sources]
winutils-python = { path = "winutils_python", editable = true }
